Add better AI behaviour

--- a/pong_dart/web/index.html
+++ b/pong_dart/web/index.html
@@ -5,10 +5,11 @@
     <link rel="stylesheet" type="text/css" href="styles.css">  
   </head>
   <body>
-    <div id="gamemodeMenu">
-      <button>Normal</button>
-      <button>AI</button>
+    <div class="gamemodeMenu">
+      <button id="normalButton">Normal</button>
+      <button id="aiButton">AI</button>
     </div>
+    <label id="gamemodeLabel">Pick a gamemode to start</label>
     <div id="scores">
       <div id="player1Score">Player 1: 0</div>
       <div id="player2Score">Player 2: 0</div>
